--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.15",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "sass": "^1.83.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
@@ -20,7 +22,7 @@
     "dependencies": {
         "lucide-react": "^0.460.0",
         "lucide-vue-next": "^0.460.0",
-        "vue-kinesis": "^1.3.3",
-        "vue-router": "^4.4.5"
+        "vue-router": "^4.4.5",
+        "vue3-typer": "^1.0.0"
     }
 }
