--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "lucide-react": "^0.460.0",
         "lucide-vue-next": "^0.460.0",
+        "markdown-it": "^14.1.0",
         "vue-router": "^4.4.5",
         "vue3-typer": "^1.0.0"
     }
