--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "crosswords-js": "github:dwmkerr/crosswords-js",
         "lucide-react": "^0.460.0",
         "lucide-vue-next": "^0.460.0",
         "markdown-it": "^14.1.0",
