feat: Implement price tracking application with product management and email notifications
- Added FiyatTakip.vue component for managing products and tracking prices.
- Implemented product addition, removal, and email settings functionality.
- Created a monitoring system to check product prices and log results.
- Developed a user interface for displaying tracked products and their statuses.
- Integrated local storage for persisting user data.
- Added a Blade view for rendering the price tracking component.
- Created a CSV file with test data for crossword puzzle.
- Added a shell script for testing path resolutions and Python access to configuration files.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "lucide-react": "^0.460.0",
         "lucide-vue-next": "^0.460.0",
         "markdown-it": "^14.1.0",
+        "papaparse": "^5.5.2",
         "vue-router": "^4.4.5",
         "vue3-typer": "^1.0.0"
     }
