--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_ENV=production
+APP_KEY=base64:R2kjrnsa9+7VimPFeA7zSomGlmCY3WD7/E1YHrRBZMY=
+APP_DEBUG=false
+APP_TIMEZONE=Europe/Istanbul
+APP_URL=https://tashih.tr
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db  # Docker kullanacağımız için bu 'db' olacak (MySQL kutumuzun adı)
 DB_PORT=3306
-DB_DATABASE=tashih_platform
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=tashih_platform # Veritabanı adınız
+DB_USERNAME=tashih_kullanici # YENİ, GÜVENLİ KULLANICI ADINIZ
+DB_PASSWORD=8524_Veysel # YENİ, GÜÇLÜ ŞİFRENİZ
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -46,19 +46,33 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=db5a849f7faabc
+# MAIL_PASSWORD=0160e53185fc28
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="veyselalperen20@gmail.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_USERNAME=db5a849f7faabc
+MAIL_PASSWORD=0160e53185fc28
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="info@tashih.tr"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_ADMIN_ADDRESS=veyselalperen20@gmail.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+FIYAT_TAKIP_ENABLED=true
+FIYAT_TAKIP_CHECK_INTERVAL=600
 
 VITE_APP_NAME="${APP_NAME}"
